# Network-Framework

./: .gitignore  README.md  package-lock.json  package.json
ScreenShare/static/: index.html
ScreenShare/static/js/: push.js  screen_share.js
cert/: www.xiaoyangst.top.key  www.xiaoyangst.top.pem
conf/: WebServer.json
screen_share/: build.sh
screen_share/conf/: server.crt
screen_share/src/: main.go
screen_share/static/: screen_share.html
screen_share/static/js/: screen_share.js
signaling/: Base.js  Conf.js  Error.js  Log.js  Main.js  Router.js  WebServer.js  go.mod
signaling/action/: xrtcclient_push.go
signaling/conf/: framework.conf  server.key
signaling/glog/: glog_file.go
signaling/src/: main.go  router.go
signaling/src/action/: base.go  push.go  xrtcclient_push.go
signaling/src/framework/: conf.go  http_server.go  init.go  log.go  xrpc.go
signaling/src/framework/xrpc/: client.go  header.go  request.go  selector.go
signaling/src/goconfig/: goconfig_test.go
signaling/static/js/: push.js
signaling/static/template/: push.tpl
xrtcserver/: CMakeLists.txt  build.sh  main.cpp
xrtcserver/conf/: xy.yaml
xrtcserver/src/base/: conf.cpp  conf.h  log.cpp  log.h
